// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when checked 1`] = `
<div
  styleName="container-checked"
>
  <input
    checked={true}
    id="the-value"
    name="the-name"
    onChange={[Function]}
    styleName="input"
    tabIndex="0"
    type="radio"
  />
  <label
    htmlFor="the-value"
    styleName="label"
  >
    <span>
      The Label
    </span>
  </label>
</div>
`;

exports[`should render correctly when not checked 1`] = `
<div
  styleName="container"
>
  <input
    checked={false}
    id="the-value"
    name="the-name"
    onChange={[Function]}
    styleName="input"
    tabIndex="0"
    type="radio"
  />
  <label
    htmlFor="the-value"
    styleName="label"
  >
    <span>
      The Label
    </span>
  </label>
</div>
`;
